GNOME Bugzilla – Bug 627828
Drag and drop between treeviews in different window groups broken: gtk_window_group_remove_window: assertion `window->group == window_group' failed
Last modified: 2010-08-24 14:17:56 UTC
Dragging a row between treeviews in different window groups (e.g. in different windows) was broken by commit 50aec80efbbae45f9736dc07160e7e767188d542. On dropping a row, the following warning is now produced, and the drag and drop operation fails: gtk_window_group_remove_window: assertion `window->group == window_group' failed This is because gtk_window_get_group() never returns NULL; if the window doesn't have a group, the default group is returned. Patch attached which adds a check in gtkdnd.c to see if the group is the default group. It's a tiny bit hacky, but any better fix would require API additions.
Created attachment 168630 [details] [review] gtk/gtkdnd.c: Fix drag and drop between tree views in different window groups
Yeah, you are right. THis an other similar problems was fixed in commit ccae84208954cb3b37e91a64058ca801791e853a Thank you for your bug report.
Sorry, the correct commit is this: http://git.gnome.org/browse/gtk+/commit/?id=c05f344c0a5c7bd1096dd7bd10c99a0e585826d2